# rag-proxy

./: Cargo.toml  HOW_TO_USE.md  README.md  config.json
.cargo/: config.toml
src/: chat.rs  embeddings.rs  main.rs  vss.rs
