[package]
name = "rag-proxy"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
mio = { git = "https://github.com/second-state/wasi_mio.git", branch = "v1.0.x" }
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.40.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }

[dependencies]
axum = "0.6"
bytes = "1"
futures-util = "0.3.30"
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }

clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
endpoints = "0.13.1"
anyhow = "1.0"
